# calcreate-web

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs  parser.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  CourseTable.tsx  WeekView.tsx  index.css  types.ts
